feat : 파티션 할당 및 확인 방법